--- a/detection-rules/vip_impersonation_subject.yml
+++ b/detection-rules/vip_impersonation_subject.yml
@@ -11,7 +11,7 @@ description: |
 type: "rule"
 severity: "medium"
 source: |
-  type.inbound
+  type.inboundsdlfsdlakfjsdflkj
   and any($org_vips,
           strings.contains(subject.subject, .display_name)
           and strings.contains(.display_name, " ")
